Update EASY - 1965. Employee with Missing Info.md

--- a/Leetcode_Que/EASY - 1965. Employee with Missing Info.md
+++ b/Leetcode_Que/EASY - 1965. Employee with Missing Info.md
@@ -1,1 +1,30 @@
-# SQL_Practise-Questions
+Write a solution to report the employees' IDs with missing information. The information of an employee is missing if:
+* The employee's name is missing, or
+* The employee's salary is missing.
+
+Return the result table ordered by employee_id in ascending order.
+
+![image](https://github.com/swethamurthy25/SQL_Practise-Questions/assets/112581595/b63c92f6-ee02-4b5b-b327-a6b980697a2b)
+
+![image](https://github.com/swethamurthy25/SQL_Practise-Questions/assets/112581595/aac8b8d1-4f3a-420b-8470-b5c54d288481)
+
+Things to be considered:
+* If we do a left join, we may get only the rows on the left table or if we do a right join we may get rows on the right table
+* But here we need to get all the tables' rows. So the best way is to use FULL OUTER JOIN or UNION
+* First do left join on employees with salary as null and again do left join on salaries with name as null
+* Then get the union of both queries.
+
+```SQL
+SELECT e.employee_id
+FROM Employees e 
+LEFT JOIN Salaries s ON e.employee_id = s.employee_id
+WHERE s.salary IS NULL
+UNION
+SELECT s.employee_id
+FROM Salaries s 
+LEFT JOIN Employees e ON s.employee_id = e.employee_id
+WHERE e.name IS NULL
+ORDER BY employee_id
+```
+
+
